--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
+		"@capacitor/cli": "^7.2.0",
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@sveltejs/adapter-static": "^3.0.8",
@@ -35,5 +36,9 @@
 		"onlyBuiltDependencies": [
 			"esbuild"
 		]
+	},
+	"dependencies": {
+		"@capacitor/android": "^7.2.0",
+		"@capacitor/core": "^7.2.0"
 	}
 }
